--- a/Challenge2_CSS_Basics_hand_in/css/styles.css
+++ b/Challenge2_CSS_Basics_hand_in/css/styles.css
@@ -1,143 +1,230 @@
-*
-COLOR PALETTE
-https://coolors.co/f7fff7-343434-2f3061-ffe66d-a1c6d7
-#F7FFF7 - almost white
-#343434 - dark gray - almost black
-#2F3061 - blue dark
-#FFE66D - yellow
-#A1C6D7 - blue light
-*/
+
+/* COLOR PALETTE
+
+
+https://coolors.co/e63946-f9edee-e3f4f4-b7ceb5-191818
+
+
+#E63946  - bright red
+
+
+#F9EDEe  - soft pink
+
+
+#E3F4F4  - mint blue
+
+
+#B7CEB5  - mint green
+
+
+#191818  - black
+
+
 
 
 /* Global styles
+
+
 ------------------------------------*/
+
+
 html {
-  box-sizing: border-box;
+ box-sizing: border-box;
 }
+
+
 *, *:before, *:after {
-  box-sizing: inherit;
+ box-sizing: inherit;
 }
+
+
+
 
 body {
-  color: #343434;
-  margin: 0;
-  padding: 0;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 15px;
-  line-height: 1.5;
-}
-img {
-  width: 300px;
-}
-a {
-  color: #FFE66D;
-}
-a:hover {
-  text-decoration: none;
-}
-h1 {
-  font-size: 100px;
-  line-height: 1;
-}
-h2 {
-  font-size: 45px;
-}
-h1, h2 {
-  font-family: 'Caveat', cursive;
-  font-weight: 400;
-  margin: 0;
-}
-.content-wrap {
-  max-width: 800px;
-  width: 85%;
-  margin: 0 auto;
-  padding: 60px 0;
-}
-h3 {
-  margin-bottom: 0;
-}
-.item-details h3 + p {
-  font-style: italic;
-}
-.item-details h3 ~ p {
-  margin: 0;
-}
-.divider > section {
-  border-bottom: 1px dashed #343434;
-  padding: 25px 0;
-}
-.divider > section:last-of-type {
-  border-bottom: none;
+ color: #343434;
+ margin: 0;
+ padding: 0;
+ font-family: 'Montserrat', sans-serif;
+ font-size: 15px;
+ line-height: 1.5;
 }
 
+
+img {
+ width: 300px;
+}
+
+
+a {
+ color: #FFF;
+}
+
+
+a:hover {
+ text-decoration: none;
+}
+
+
+h1 {
+ font-size: 100px;
+ line-height: 1;
+}
+
+
+h2 {
+ font-size: 45px;
+}
+
+
+h1, h2 {
+ font-family: 'https://fonts.google.com/specimen/Girassol', sans-serif;
+ font-weight: 500;
+ margin: 0;
+}
+
+
+.content-wrap {
+ max-width: 800px;
+ width: 85%;
+ margin: 0 auto;
+ padding: 60px 0;
+}
+
+
+h3 {
+ margin-bottom: 0;
+}
+
+
+.item-details h3 + p {
+ font-style: italic;
+}
+
+
+.item-details h3 ~ p {
+ margin: 0;
+}
+
+
+.divider > section {
+ border-bottom: 1px dashed #343434;
+ padding: 25px 0;
+}
+
+
+.divider > section:last-of-type {
+ border-bottom: none;
+}
 
 /* Profile
 ------------------------------------*/
+
 header {
-  background: #2F3061;
-  color: #F7FFF7;
+ background: #050505;
+ color: #F7FFF7;
 }
 
 
 /* Projects
 ------------------------------------*/
+
 .projects {
-  background: #F7FFF7;
-}
-.projects a {
-  color: #2F3061;
-}
-.projects .btn {
-  color: #F7FFF7;
-  background: #2F3061;
-  text-decoration: none;
-  padding: 8px;
-  border-radius: 4px;
-  display: inline-block;
-}
-.projects .btn:hover {
-  background: rgba(47, 48, 97, 80%);
-}
-.project-item {
-  overflow: hidden;
-}
-.project-item h3 {
-  margin-top: 0;
+ background: #F4E3E3;
 }
 
+.projects a {
+ color: #E63946;
+}
+
+.projects .btn {
+ color: #F7FFF7;
+ background: #B7CEB5;
+ text-decoration: none;
+ padding: 8px;
+ border-radius: 4px;
+ display: inline-block;
+}
+
+.projects .btn:hover {
+ background: rgba(47, 48, 97, 80%);
+}
+
+.project-item {
+ overflow: hidden;
+}
+
+.project-item h3 {
+ margin-top: 0;
+}
 
 /* Work Experience
 ------------------------------------*/
+
 .work-experience {
-  background: #A1C6D7;
+ background: #628784;
 }
 
 
+.work-exprience a {
+ color: #E63946;
+}
+
+.btn {
+    display: inline-block;
+    padding: 18px 14px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #F9EDEe;
+    border: none;
+    border-radius: 4px;
+      box-shadow: 0 9px #999;
+    }
+
+    .btn:hover {background-color: #E63946}
+
+    .btn:active {
+    background-color: #E63946;
+    box-shadow: 0 0px #666;
+    transform: translateY(4px);
+}
 
 /* Education
 ------------------------------------*/
-.education {
-  background-image: url(../images/joanna-kosinska-unsplash.jpg);
-  background-size: cover;
-  background-position: top right;
-  padding-bottom: 100px;
-}
-.education p {
-  width: 60%;
+.education{
+ background-image: url(../images/backgroundnotes.jpg);
+ background-size: cover;
+ background-position: top right;
+ padding-bottom: 100px;
 }
 
+.education p {
+ width: 60%;
+}
 
 /* Contact Info
+
 ------------------------------------*/
+
+
 footer {
-  background: #343434;
-  color: #F7FFF7;
+ background: #E63946;
+ color: #F7FFF7;
 }
+
+
 .contact-list {
-  list-style-type: none;
-  padding: 0;
+ list-style-type: none;
+ padding: 0;
 }
+
+
 .contact-list a {
-  padding: 15px;
-  display: inline-block;
+ padding: 15px;
+ display: inline-block;
 }
+
+
